<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <EditText
            android:id="@+id/editNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nome" />

        <EditText
            android:id="@+id/editDescricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_descricao" />

        <EditText
            android:id="@+id/editPreco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/hint_preco" />

        <ImageView
            android:id="@+id/imgPreview"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerCrop"
            android:contentDescription="@string/content_description_imagem"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_img_arredondada"
            android:clipToOutline="true"
            android:outlineProvider="background"
            android:src="@drawable/comidas_tipicas_para_festa_junina" />

        <Button
            android:id="@+id/btnSalvar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_salvar" />

        <Button
            android:id="@+id/btnListar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_listar" />
    </LinearLayout>
</ScrollView>
